deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
  template:
    metadata:
      labels:
        app: greeter
    spec:
      containers:
      - name: greeter-server
        image: tlitovsk/greeter:ver1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
