deployment/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: greeter-service
spec:
  selector:
    app: greeter
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
